--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
         "Docker",
         "noVNC"
     ],
-    "env": {},
+    "env": {
     "website": "",
     "repository": "https://github.com/akuhnet/hero20.04.git",
     "stack": "container"
