--- a/app.json
+++ b/app.json
@@ -7,14 +7,19 @@
         "noVNC"
     ],
     "env": {
-	"VNC_TITLE" : {
+      "VNC_TITLE" : {
         "description": "VNC Session Title, w/o spaces.",
 	      "value" : "Ubuntu_Desktop",
         "required" : true
       } ,
-	    "VNC_PASS": {
+      "VNC_PASS": {
         "description": "VNC server password w/o spaces.",
         "required" : true
+      },
+      "VNC_RESOLUTION" : {
+        "description": "VNC Server Resolution in WxH, 720p is preferrable.",
+		"value" : "1280x720",
+        "required" : true
       }
-    }
-}
+    } 
+  }
