--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
         "required" : true
       }
     "website": "",
-    "repository": "https://github.com/anhdhbn/heroku-novnc.git",
+    "repository": "https://github.com/akuhnet/hero20.04",
     "stack": "container"
     } 
   }
